# Simple-Translation-Tool-Based-on-Dify

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  test.txt
src/: api.rs  config.rs  file_operations.rs  main.rs
