[package]
name = "dify_translation"
version = "0.1.0"
edition = "2021"
authors = ["FWW", "3223400498@qq.com"]
description = "base on dify api"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = [ "fs", "io-util", "sync", "macros", "rt-multi-thread"] }
toml = "0.8"
